--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.11.17",
     "html-to-image": "^1.11.13",
+    "html2pdf.js": "^0.12.0",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.462.0",
     "next": "^14.2.18",
     "postcss": "^8.5.4",
@@ -34,5 +36,8 @@
     "tailwindcss"
   ],
   "author": "Charlie Henin",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/html2pdf.js": "^0.10.0"
+  }
 }
