--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
 [build]
   publish = "out"
-  command = "rm -rf node_modules package-lock.json && npm install --legacy-peer-deps && npm run build"
+  command = "npm ci --prefer-offline --no-audit --legacy-peer-deps --timeout=300000 && npm run build"
 
 [build.environment]
-  NODE_VERSION = "20.11.1"
-  NPM_VERSION = "10.2.4"
-  NPM_FLAGS = "--prefer-offline --no-audit"
+  NODE_VERSION = "18"
+  NPM_CONFIG_REGISTRY = "https://registry.npmjs.org/"
+  NPM_CONFIG_TIMEOUT = "300000"
+  NPM_CONFIG_FETCH_TIMEOUT = "300000"
 
 [[redirects]]
   from = "/*"
