--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,15 @@
 [build]
   publish = "out"
-  command = "rm -rf node_modules && npm install --legacy-peer-deps && npx next build"
+  command = "rm -rf node_modules package-lock.json && npm cache clean --force && npm install --legacy-peer-deps --verbose && npm ls && npx next build"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
+  NPM_VERSION = "10"
   NPM_CONFIG_REGISTRY = "https://registry.npmjs.org/"
   NPM_CONFIG_TIMEOUT = "600000"
   NPM_CONFIG_FETCH_TIMEOUT = "600000"
   NPM_CONFIG_PROGRESS = "false"
+  NPM_CONFIG_LOGLEVEL = "verbose"
 
 [[redirects]]
   from = "/*"
