--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,13 @@
 [build]
   publish = "out"
-  command = "npm config set registry https://registry.npmjs.org/ && rm -rf node_modules package-lock.json && npm cache clean --force && npm install --registry=https://registry.npmjs.org/ --legacy-peer-deps --verbose && npm ls && npx next build"
+  command = "rm -rf ~/.npmrc .npmrc && echo 'registry=https://registry.npmjs.org/' > .npmrc && npm config set registry https://registry.npmjs.org/ && npm config get registry && rm -rf node_modules package-lock.json && npm cache clean --force && npm install --registry=https://registry.npmjs.org/ --legacy-peer-deps --verbose && npm ls && npx next build"
 
 [build.environment]
   NODE_VERSION = "20"
   NPM_VERSION = "10"
   NPM_CONFIG_REGISTRY = "https://registry.npmjs.org/"
+  NPM_REGISTRY = "https://registry.npmjs.org/"
+  YARN_REGISTRY = "https://registry.npmjs.org/"
   NPM_CONFIG_TIMEOUT = "600000"
   NPM_CONFIG_FETCH_TIMEOUT = "600000"
   NPM_CONFIG_PROGRESS = "false"
