--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "out"
-  command = "rm -rf ~/.npmrc .npmrc && echo 'registry=https://registry.npmjs.org/' > .npmrc && npm config set registry https://registry.npmjs.org/ && npm config get registry && rm -rf node_modules package-lock.json && npm cache clean --force && npm install --registry=https://registry.npmjs.org/ --legacy-peer-deps --verbose && npm ls && npx next build"
+  command = "rm -rf ~/.npmrc .npmrc ~/.npm && echo 'registry=https://registry.npmjs.org/' > .npmrc && npm config set registry https://registry.npmjs.org/ --location=project && npm config set cache /tmp/npm-cache --location=project && npm config list && rm -rf node_modules package-lock.json && npm cache clean --force && npm cache verify && npm install --registry=https://registry.npmjs.org/ --cache=/tmp/npm-cache --no-optional --legacy-peer-deps --verbose && npm ls && npx next build"
 
 [build.environment]
   NODE_VERSION = "20"
@@ -8,10 +8,13 @@
   NPM_CONFIG_REGISTRY = "https://registry.npmjs.org/"
   NPM_REGISTRY = "https://registry.npmjs.org/"
   YARN_REGISTRY = "https://registry.npmjs.org/"
+  NPM_CONFIG_CACHE = "/tmp/npm-cache"
   NPM_CONFIG_TIMEOUT = "600000"
   NPM_CONFIG_FETCH_TIMEOUT = "600000"
   NPM_CONFIG_PROGRESS = "false"
   NPM_CONFIG_LOGLEVEL = "verbose"
+  NPM_CONFIG_PREFER_OFFLINE = "false"
+  NPM_CONFIG_OFFLINE = "false"
 
 [[redirects]]
   from = "/*"
